# a-field-guide-to-the-wilderness

./: .gitignore  AGENTS.md  IMPLEMENTATION_PLAN.md  Makefile  README.md  SPEC.md  pyproject.toml
data/benign/: descriptive_prompts.txt  sample.json  suspicious_discussion.txt
data/benign/manifest_bundle/: manifest.json  notes.txt
data/benign/provenance_case/: provenance.json
data/hostile/: README.md  control-sequence.txt  suspicious_credentials.txt  suspicious_ignore.txt  suspicious_many_lines.txt  suspicious_normalized_prompt.txt  suspicious_repeated.txt  suspicious_split_prompt.txt  suspicious_tool.txt
data/hostile/duplicate_names/: first.txt  second.txt
data/hostile/forged_manifest_hash/: manifest.json  payload.txt
data/hostile/forged_manifest_name/: manifest.json
data/hostile/malformed_xml/: broken.xml
data/hostile/redaction_case/: notes.txt
data/hostile/wrong_type_manifest/: manifest.json
src/wilderness/: __main__.py  cli.py  common.py  inspect.py  intake.py  policy.py  provenance.py  redact.py  report.py  unpack.py
tests/: test_cli.py  test_hardening.py  test_policy_and_redaction.py
tests/fixtures/: report_benign_bundle.txt  report_benign_descriptive_prompts.txt  report_hostile_control_sequence.txt  report_hostile_forged_manifest.txt  report_suspicious_ignore.txt
