[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "wilderness"
version = "0.1.0"
description = "Terminal-native intake perimeter for hostile artifact bundles."
readme = "README.md"
requires-python = ">=3.11"
authors = [{name = "Codex"}]

[project.scripts]
wilderness = "wilderness.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
